# aciTerraformServer

./: LICENSE  Makefile  README.md  default.conf  pyproject.toml  requirements.txt
aws/: README.md  default.conf
example/: aci_node_blocks.tf  aci_vrf_demo.tf  demo_app_profile.tf  demo_static_epg_129_1_3_1000_r.tf  demo_static_epg_129_1_3_999_r.tf  demo_vlan_pool.tf  demo_will_fail_import.tf  local_file.tf  nac_bridge_domain.tf  nac_contract.tf  test_tenant.tf
example/compare/: aci_bgp_address_family_context.tf  demo_fabric_members.tf  demo_static_epg_129_1_3_1000_r.tf
howTo/: COMPARE.md  DIFFLOG.md  IMPORT.md  TABLE.md  VISUALISE.md  compareImportHowToGuide.docx  diffHowToGuide.docx  importHowToGuide.docx  tableHowToGuide.docx  visualiseHowToGuide.docx
import_aci_tf/: import_aci_tf_db.py  temp.py
proposed/: aci_node_blocks.tf  aci_vrf_demo.tf  demo_aaep.tf  demo_aci_leaf_selector.tf  demo_app_epg.tf  demo_static_epg.tf  demo_vrf_to_bgp_address_family_context.tf  provider.tf
source/: acf_tf_draw.py  aci_tf_draw.py  constants.py  import_aci_tf.py  mongo_connect.py  temp.py  webServer.py  web_server.py
source/static/css/: style.css
source/static/js/: exportToCsv.js  js_code.js  js_draw.js
source/templates/: compare.html  diff.html  draw.html  import.html  table.html  test.html
tests/: conftest.py  test_aci_tf_draw.py  test_import_aci_tf_db.py  test_mongo_connect.py  test_web_server.py
