[tool.poetry]
name = "aciterraformserver"
version = "0.1.0"
description = ""
authors = ["Antony <47122295+atxit@users.noreply.github.com.>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyhcl = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
